[package]
name = "e9571_math_lib"
version = "0.1.1"
edition = "2024"
description = "A Rust crate for high-precision numerical calculations and percentage comparisons"
license = "MIT"
repository = "https://github.com/e9571/e9571_math_lib"
documentation = "https://docs.rs/e9571_math_lib"
homepage = "https://github.com/e9571"
keywords = ["math", "percentage", "calculation", "numerical", "comparison"]
categories = ["mathematics", "algorithms"]


[dependencies]
e9571_lib1 = "0.1.0"
